--- a/Jumper/Jumper.CSharp.csproj
+++ b/Jumper/Jumper.CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CameraScript.cs" />
+    <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\Health.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\Shoot.cs" />
