--- a/Baryon/Baryon.CSharp.csproj
+++ b/Baryon/Baryon.CSharp.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Board.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\HeuristicAIPlayer.cs" />
     <Compile Include="Assets\Scripts\MovePanelScr.cs" />
     <Compile Include="Assets\Scripts\Pawn.cs" />
     <Compile Include="Assets\Scripts\Square.cs" />
