--- a/Baryon/Baryon.CSharp.csproj
+++ b/Baryon/Baryon.CSharp.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\AI\HeuristicAIPlayer.cs" />
+    <Compile Include="Assets\Scripts\AI\MiniMax.cs" />
+    <Compile Include="Assets\Scripts\AI\MiniMax1.cs" />
     <Compile Include="Assets\Scripts\AI\Perception.cs" />
     <Compile Include="Assets\Scripts\AI\RandomAI.cs" />
     <Compile Include="Assets\Scripts\Board.cs" />
